# orizon-todo-challenge

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/core/: pagination.py  views.py
backend/apps/tasks/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_task.py  0003_case_insensitive_category_and_indexes.py
backend/config/: urls.py
backend/config/settings/: base.py  production.py
backend/tests/: test_auth.py  test_categories.py  test_health.py  test_task_filters.py  test_task_sharing.py  test_tasks.py
e2e/: README.md  conftest.py  helpers.py  test_auth_flow.py  test_category_flow.py  test_smoke.py  test_task_crud_flow.py  test_task_filter_flow.py  test_task_pagination_flow.py  test_task_sharing_flow.py  test_task_toggle_flow.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: AppLayout.tsx  ProtectedRoute.tsx
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx  TasksPage.tsx
frontend/src/services/: api.test.ts  api.ts  auth.ts  categories.ts  tasks.ts
frontend/src/store/: authStore.test.ts  authStore.ts
frontend/src/utils/: errors.ts
